// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkPhoneNumberInput should render correctly 1`] = `
<View
  style={null}
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 16,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(22, 22, 22, 1)",
          "fontFamily": "sans-serif",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 16,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": false,
          "color": null,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "rgb(194, 201, 205)",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 4,
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "rgb(239, 241, 242)",
                "height": 12,
                "marginEnd": 8,
                "width": 16,
              },
            ],
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "textAlign": "left",
            },
            Object {},
            Array [
              Object {
                "marginEnd": "auto",
              },
              false,
            ],
          ]
        }
      >
        +44
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginStart": 4,
              },
              null,
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(194, 201, 205, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        placeholderTextColor="rgba(0, 0, 0, 0.2)"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderBottomWidth": 0,
              "color": "rgb(22, 22, 22)",
              "flex": 1,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 27,
              "paddingHorizontal": 0,
              "paddingVertical": 4,
              "textAlign": "left",
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`Android BpkPhoneNumberInput should render correctly with \`editable\` false 1`] = `
<View
  style={null}
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 16,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.2)",
          "fontFamily": "sans-serif",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 16,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityRole="button"
      accessible={true}
      focusable={false}
      nativeBackgroundAndroid={
        Object {
          "borderless": false,
          "color": null,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "rgb(194, 201, 205)",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 4,
          },
          Object {
            "borderColor": "rgb(224, 227, 229)",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "rgb(239, 241, 242)",
                "height": 12,
                "marginEnd": 8,
                "width": 16,
              },
            ],
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "textAlign": "left",
            },
            Object {},
            Array [
              Object {
                "marginEnd": "auto",
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.2)",
                },
              ],
            ],
          ]
        }
      >
        +44
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginStart": 4,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.2)",
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(194, 201, 205, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        placeholderTextColor="rgba(0, 0, 0, 0.2)"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderBottomWidth": 0,
              "color": "rgb(22, 22, 22)",
              "flex": 1,
              "fontSize": 16,
              "fontWeight": "400",
              "minHeight": 27,
              "paddingHorizontal": 0,
              "paddingVertical": 4,
              "textAlign": "left",
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;
